[gd_scene load_steps=5 format=2]

[ext_resource path="res://MainScript.gd" type="Script" id=1]
[ext_resource path="res://assets/Dice_icon1.png" type="Texture" id=2]
[ext_resource path="res://assets/addButton.png" type="Texture" id=4]
[ext_resource path="res://assets/deleteButton.png" type="Texture" id=5]

[node name="Main" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 904.0
margin_bottom = 520.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 784.0
margin_bottom = 14.0
text = "Dice Roller 2000"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 904.0
margin_bottom = 520.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
margin_left = 83.0
margin_top = 137.0
margin_right = 700.0
margin_bottom = 303.0
custom_constants/separation = 22

[node name="Options" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
margin_right = 74.0
margin_bottom = 166.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="DiceSettings" type="VBoxContainer" parent="CenterContainer/HBoxContainer/Options"]
margin_right = 74.0
margin_bottom = 42.0

[node name="DiceText" type="Label" parent="CenterContainer/HBoxContainer/Options/DiceSettings"]
margin_right = 74.0
margin_bottom = 14.0
text = "Dice edges"
valign = 1

[node name="Dice" type="SpinBox" parent="CenterContainer/HBoxContainer/Options/DiceSettings"]
margin_top = 18.0
margin_right = 74.0
margin_bottom = 42.0
rounded = true

[node name="AmountSettings" type="VBoxContainer" parent="CenterContainer/HBoxContainer/Options"]
margin_top = 62.0
margin_right = 74.0
margin_bottom = 104.0

[node name="AmountText" type="Label" parent="CenterContainer/HBoxContainer/Options/AmountSettings"]
margin_right = 74.0
margin_bottom = 14.0
text = "Amount"
valign = 1

[node name="Amount" type="SpinBox" parent="CenterContainer/HBoxContainer/Options/AmountSettings"]
margin_top = 18.0
margin_right = 74.0
margin_bottom = 42.0
min_value = 1.0
max_value = 1000.0
value = 1.0
rounded = true

[node name="Roll" type="Button" parent="CenterContainer/HBoxContainer/Options"]
margin_top = 124.0
margin_right = 74.0
margin_bottom = 146.0
size_flags_vertical = 0
text = "Roll"
icon = ExtResource( 2 )

[node name="Results" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
margin_left = 96.0
margin_right = 136.0
margin_bottom = 166.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
alignment = 1

[node name="ResultText" type="Label" parent="CenterContainer/HBoxContainer/Results"]
margin_top = 63.0
margin_right = 40.0
margin_bottom = 77.0
text = "Result"
align = 1
valign = 1

[node name="Result" type="Label" parent="CenterContainer/HBoxContainer/Results"]
margin_left = 7.0
margin_top = 77.0
margin_right = 32.0
margin_bottom = 102.0
rect_min_size = Vector2( 25, 25 )
size_flags_horizontal = 4
text = "..."
align = 1
valign = 1

[node name="RolledDicesArray" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
margin_left = 158.0
margin_right = 333.0
margin_bottom = 166.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="RolledDices" type="Label" parent="CenterContainer/HBoxContainer/RolledDicesArray"]
margin_top = 59.0
margin_right = 175.0
margin_bottom = 73.0
text = "Rolled dices:"
align = 1
valign = 1

[node name="RollsTable" type="Label" parent="CenterContainer/HBoxContainer/RolledDicesArray"]
margin_top = 77.0
margin_right = 175.0
margin_bottom = 102.0
rect_min_size = Vector2( 175, 25 )
size_flags_horizontal = 4
text = "No rolled dices"
align = 1
valign = 1
autowrap = true

[node name="GridContainer" type="GridContainer" parent="CenterContainer/HBoxContainer/RolledDicesArray"]
margin_top = 106.0
margin_right = 175.0
margin_bottom = 106.0
columns = 8

[node name="OptionalSettings" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
margin_left = 355.0
margin_right = 617.0
margin_bottom = 166.0
custom_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/HBoxContainer/OptionalSettings"]
margin_right = 262.0
margin_bottom = 20.0
custom_constants/separation = 50

[node name="Label" type="Label" parent="CenterContainer/HBoxContainer/OptionalSettings/HBoxContainer"]
margin_top = 3.0
margin_right = 132.0
margin_bottom = 17.0
text = "Optional settings"
uppercase = true

[node name="ClearOptionalValues" type="Button" parent="CenterContainer/HBoxContainer/OptionalSettings/HBoxContainer"]
margin_left = 182.0
margin_right = 226.0
margin_bottom = 20.0
text = "Clear"

[node name="FailureSettings" type="VBoxContainer" parent="CenterContainer/HBoxContainer/OptionalSettings"]
margin_top = 30.0
margin_right = 262.0
margin_bottom = 72.0

[node name="FailureText" type="Label" parent="CenterContainer/HBoxContainer/OptionalSettings/FailureSettings"]
margin_right = 262.0
margin_bottom = 14.0
text = "Failure value"

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/HBoxContainer/OptionalSettings/FailureSettings"]
margin_top = 18.0
margin_right = 262.0
margin_bottom = 42.0
custom_constants/separation = 10

[node name="FailureValue" type="SpinBox" parent="CenterContainer/HBoxContainer/OptionalSettings/FailureSettings/HBoxContainer"]
margin_right = 74.0
margin_bottom = 24.0
min_value = 1.0
value = 1.0
rounded = true

[node name="DecreaseButtonFailure" type="TextureButton" parent="CenterContainer/HBoxContainer/OptionalSettings/FailureSettings/HBoxContainer"]
margin_left = 84.0
margin_top = 4.0
margin_right = 100.0
margin_bottom = 20.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 5 )

[node name="AddButtonFailure" type="TextureButton" parent="CenterContainer/HBoxContainer/OptionalSettings/FailureSettings/HBoxContainer"]
margin_left = 110.0
margin_top = 4.0
margin_right = 126.0
margin_bottom = 20.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 4 )

[node name="Label" type="Label" parent="CenterContainer/HBoxContainer/OptionalSettings/FailureSettings/HBoxContainer"]
margin_left = 136.0
margin_top = 5.0
margin_right = 232.0
margin_bottom = 19.0
text = "Failure values: "
align = 1

[node name="FailureValuesArray" type="Label" parent="CenterContainer/HBoxContainer/OptionalSettings/FailureSettings/HBoxContainer"]
margin_left = 242.0
margin_top = 5.0
margin_right = 254.0
margin_bottom = 19.0
text = "..."

[node name="SuccessSettings" type="VBoxContainer" parent="CenterContainer/HBoxContainer/OptionalSettings"]
margin_top = 82.0
margin_right = 262.0
margin_bottom = 124.0

[node name="SuccessText" type="Label" parent="CenterContainer/HBoxContainer/OptionalSettings/SuccessSettings"]
margin_right = 262.0
margin_bottom = 14.0
text = "Success value"

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/HBoxContainer/OptionalSettings/SuccessSettings"]
margin_top = 18.0
margin_right = 262.0
margin_bottom = 42.0
custom_constants/separation = 10

[node name="SuccessValue" type="SpinBox" parent="CenterContainer/HBoxContainer/OptionalSettings/SuccessSettings/HBoxContainer2"]
margin_right = 74.0
margin_bottom = 24.0
min_value = 1.0
value = 1.0
rounded = true

[node name="DecreaseButtonSuccess" type="TextureButton" parent="CenterContainer/HBoxContainer/OptionalSettings/SuccessSettings/HBoxContainer2"]
margin_left = 84.0
margin_top = 4.0
margin_right = 100.0
margin_bottom = 20.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 5 )

[node name="AddButtonSuccess" type="TextureButton" parent="CenterContainer/HBoxContainer/OptionalSettings/SuccessSettings/HBoxContainer2"]
margin_left = 110.0
margin_top = 4.0
margin_right = 126.0
margin_bottom = 20.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 4 )

[node name="Label2" type="Label" parent="CenterContainer/HBoxContainer/OptionalSettings/SuccessSettings/HBoxContainer2"]
margin_left = 136.0
margin_top = 5.0
margin_right = 240.0
margin_bottom = 19.0
text = "Success values: "
align = 1

[node name="SuccessValuesArray" type="Label" parent="CenterContainer/HBoxContainer/OptionalSettings/SuccessSettings/HBoxContainer2"]
margin_left = 250.0
margin_top = 5.0
margin_right = 262.0
margin_bottom = 19.0
text = "..."

[node name="OptionalResultHBox" type="HBoxContainer" parent="CenterContainer/HBoxContainer/OptionalSettings"]
margin_top = 134.0
margin_right = 262.0
margin_bottom = 166.0
custom_constants/separation = 50

[node name="FailureVBox" type="VBoxContainer" parent="CenterContainer/HBoxContainer/OptionalSettings/OptionalResultHBox"]
margin_right = 50.0
margin_bottom = 32.0

[node name="FailureResultText" type="Label" parent="CenterContainer/HBoxContainer/OptionalSettings/OptionalResultHBox/FailureVBox"]
margin_right = 50.0
margin_bottom = 14.0
text = "Failures"

[node name="FailureResultValue" type="Label" parent="CenterContainer/HBoxContainer/OptionalSettings/OptionalResultHBox/FailureVBox"]
margin_top = 18.0
margin_right = 50.0
margin_bottom = 32.0
text = "..."
align = 1
valign = 1

[node name="SuccessVBox" type="VBoxContainer" parent="CenterContainer/HBoxContainer/OptionalSettings/OptionalResultHBox"]
margin_left = 100.0
margin_right = 151.0
margin_bottom = 32.0

[node name="SuccessResultText" type="Label" parent="CenterContainer/HBoxContainer/OptionalSettings/OptionalResultHBox/SuccessVBox"]
margin_right = 51.0
margin_bottom = 14.0
text = "Success"

[node name="SuccessResultValue" type="Label" parent="CenterContainer/HBoxContainer/OptionalSettings/OptionalResultHBox/SuccessVBox"]
margin_top = 18.0
margin_right = 51.0
margin_bottom = 32.0
text = "..."
align = 1
valign = 1

[connection signal="pressed" from="CenterContainer/HBoxContainer/Options/Roll" to="." method="_on_Roll_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/OptionalSettings/HBoxContainer/ClearOptionalValues" to="." method="_on_ClearOptionalValues_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/OptionalSettings/FailureSettings/HBoxContainer/DecreaseButtonFailure" to="." method="_on_DecreaseButtonFailure_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/OptionalSettings/FailureSettings/HBoxContainer/AddButtonFailure" to="." method="_on_AddButtonFailure_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/OptionalSettings/SuccessSettings/HBoxContainer2/DecreaseButtonSuccess" to="." method="_on_DecreaseButtonSuccess_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/OptionalSettings/SuccessSettings/HBoxContainer2/AddButtonSuccess" to="." method="_on_AddButtonSuccess_pressed"]
